--- a/DMD - gray.ipynb
+++ b/DMD - gray.ipynb
@@ -14,8 +14,7 @@
     "import os\n",
     "\n",
     "rcParams.update({'font.size': 18})\n",
-    "plt.rcParams['figure.figsize'] = [4, 8]\n",
-    "\n"
+    "plt.rcParams['figure.figsize'] = [4, 8]"
    ]
   },
   {
