Update DMD: conclusion

--- a/DMD - gray.ipynb
+++ b/DMD - gray.ipynb
@@ -179,6 +179,22 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dynamic mode decomposition (DMD) is a powerful technique for analyzing and modeling the dynamics of complex systems. However, DMD is not well-suited for handling noisy data. If the data is too noisy, the DMD algorithm will struggle to identify the underlying dynamics and may produce misleading results. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the same thing happened with the sample video that I provided, the data was too noisy for DMD to handle effectively. Despite the potential of DMD for analyzing and modeling dynamic systems, the presence of excessive noise in the video data made it difficult for the DMD algorithm to identify the underlying patterns and trends. The noise in the data obscured the true dynamics, leading to unstable or incorrect models and predictions from the DMD analysis. This highlights the importance of considering the quality and nature of the data when applying DMD, and the potential need for pre-processing steps to remove or reduce noise before applying the algorithm."
+   ]
   }
  ],
  "metadata": {
