--- a/DMD - gray.ipynb
+++ b/DMD - gray.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Purpose and Objectives\n",
+    "\n",
+    "The purpose of this project is to perform Dynamic Mode Decomposition (DMD) on an oscillating flow data, represented as grayscale images. The objective is to use DMD to analyze the dynamic behavior of the flow and gain insights into its underlying patterns and structures. The project involves applying DMD to extract the dominant modes and their temporal evolution. The results of the analysis are visualized. \n",
+    "\n",
+    "\n",
+    "*** Note: It is recommended to use your own data for better results. Please make sure that the data is not highly nonlinear and has limited frequencies for optimal DMD performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
